--- a/force-app/main/default/lwc/registForm/registForm.html
+++ b/force-app/main/default/lwc/registForm/registForm.html
@@ -1,33 +1,61 @@
 <template>
-    <lightning-record-edit-form object-api-name="User" onsuccess={handleSuccess}>
-        <lightning-messages></lightning-messages>
-        <div class="slds-box slds-m-around_medium">
-            <lightning-input-field field-name='Id' value={userId}></lightning-input-field>
-            <lightning-input-field field-name='Username' value={username} disabled></lightning-input-field>
-            <lightning-input-field field-name='Name'></lightning-input-field>
-            <lightning-input-field field-name='Email' onchange={handleEmailChange}></lightning-input-field>
-            <lightning-input-field field-name='Alias' value={ailas}></lightning-input-field>
-            <lightning-input-field field-name='ProfileId' ></lightning-input-field>
-            <lightning-input-field field-name='LocaleSidKey' disabled value="ja_JP"></lightning-input-field>
-            <lightning-input-field field-name='TimeZoneSidKey' disabled value="Asia/Tokyo"></lightning-input-field>
-            <lightning-input-field field-name='LanguageLocaleKey' disabled value="ja"></lightning-input-field>
-            <lightning-input-field field-name='EmailEncodingKey' value="ISO-2022-JP" disabled></lightning-input-field>            
-            
-            <div class="slds-m-top_medium">
-                <center>
-                    <lightning-button variant="brand" type="submit" name="save" icon-name="utility:adduser" label="ユーザー登録">
+    <lightning-card title="ユーザー登録" icon-name="standard:user">
+        <div class="slds-m-around_medium">
+            <div class="slds-grid slds-gutters">
+                <div class="slds-col" tabindex="0">
+                    <lightning-input
+                        placeholder="富士"
+                        label="姓"
+                        required
+                        onchange={handleLastNameChange}
+                        class="slds-m-bottom_x-small"
+                    ></lightning-input>
+                </div>
+                <div class="slds-col">
+                    <lightning-input
+                        label="名"
+                        placeholder="太郎"
+                        required
+                        onchange={handlefirstNameChange}
+                        class="slds-m-bottom_x-small"
+                    ></lightning-input>
+                </div>
+            </div>
+            <lightning-input type="email"
+                label="メールアドレス"
+                placeholder="sample@fsi.co.jp"
+                required
+                onchange={handleEmailChange}
+                class="slds-m-bottom_x-small"
+            ></lightning-input>
+            <lightning-input
+                label="ユーザー名"
+                disabled
+                value={username}
+                class="slds-m-bottom_x-small"
+            ></lightning-input>
+            <lightning-input
+                label="別名"
+                disabled
+                value={alias}
+                class="slds-m-bottom_x-small"
+            ></lightning-input>
+        </div>
+        <hr>
+        <div class="slds-m-top_medium">
+            <center>
+                <lightning-button variant="brand" type="submit" onclick={saveUser} icon-name="utility:adduser" label="ユーザー登録">
+                </lightning-button>
+                &nbsp;&nbsp;&nbsp;
+                <template if:true={canreset}>
+                    <lightning-button variant="success" icon-name="utility:reset_password" onclick={navigateToWebPage} label="パスワードをリセット">
                     </lightning-button>
-                    &nbsp;&nbsp;&nbsp;
-                    <template if:true={canreset}>
-                        <lightning-button variant="success" icon-name="utility:reset_password" onclick={navigateToWebPage} label="パスワードをリセット">
-                        </lightning-button>
-                    </template>
-                    <template if:false={canreset}>
-                        <lightning-button variant="success" icon-name="utility:reset_password" disabled label="パスワードをリセット">
-                        </lightning-button>
-                    </template>
-                </center>
-           </div>
-       </div>
-    </lightning-record-edit-form>
+                </template>
+                <template if:false={canreset}>
+                    <lightning-button variant="success" icon-name="utility:reset_password" disabled label="パスワードをリセット">
+                    </lightning-button>
+                </template>
+            </center>
+        </div>
+    </lightning-card>
 </template>
