--- a/force-app/main/default/lwc/registForm/registForm.html
+++ b/force-app/main/default/lwc/registForm/registForm.html
@@ -29,7 +29,10 @@
                 class="slds-m-bottom_x-small"
             ></lightning-input>
             <template if:true={isExistUser}>
-                <p><font color="red"><lightning-formatted-text value="このメールアドレスは既に登録されているので、登録できません。" ></lightning-formatted-text></font></p>
+                <p>
+                    <lightning-icon icon-name="utility:error" alternative-text="Error!" variant="error" title="Error" size="xx-small"></lightning-icon>
+                    <font color="red"><lightning-formatted-text value="このメールアドレスは既に登録されているので、登録できません。" ></lightning-formatted-text></font>
+                </p>
             </template>
             <lightning-input
                 label="ユーザー名"
