--- a/force-app/main/default/lwc/registForm/registForm.html
+++ b/force-app/main/default/lwc/registForm/registForm.html
@@ -1,6 +1,6 @@
 <template>
     <lightning-card title="ユーザー登録" icon-name="standard:user">
-        <div class="slds-m-around_medium">
+        <div class="slds-var-m-around_medium">
             <div class="slds-grid slds-gutters">
                 <div class="slds-col" tabindex="0">
                     <lightning-input
@@ -8,7 +8,7 @@
                         label="姓"
                         required
                         onchange={handleLastNameChange}
-                        class="slds-m-bottom_x-small"
+                        class="slds-var-m-bottom_x-small"
                     ></lightning-input>
                 </div>
                 <div class="slds-col">
@@ -17,7 +17,7 @@
                         placeholder="太郎"
                         required
                         onchange={handlefirstNameChange}
-                        class="slds-m-bottom_x-small"
+                        class="slds-var-m-bottom_x-small"
                     ></lightning-input>
                 </div>
             </div>
@@ -26,7 +26,7 @@
                 placeholder="sample@fsi.co.jp"
                 required
                 onchange={handleEmailChange}
-                class="slds-m-bottom_x-small"
+                class="slds-var-m-bottom_x-small"
             ></lightning-input>
             <template if:true={isExistUser}>
                 <p>
@@ -38,30 +38,28 @@
                 label="ユーザー名"
                 disabled
                 value={username}
-                class="slds-m-bottom_x-small"
+                class="slds-var-m-bottom_x-small"
             ></lightning-input>
             <lightning-input
                 label="別名"
                 disabled
                 value={alias}
-                class="slds-m-bottom_x-small"
+                class="slds-var-m-bottom_x-small"
             ></lightning-input>
         </div>
         <hr>
-        <div class="slds-m-top_medium">
-            <center>
-                <lightning-button variant="brand" type="submit" onclick={saveUser} icon-name="utility:adduser" label="ユーザー登録">
+        <div class="slds-var-m-top_medium slds-align_absolute-center">
+            <lightning-button variant="brand" type="submit" onclick={saveUser} icon-name="utility:adduser" label="ユーザー登録">
+            </lightning-button>
+            &nbsp;&nbsp;&nbsp;
+            <template if:true={canreset}>
+                <lightning-button variant="success" icon-name="utility:reset_password" onclick={navigateToWebPage} label="パスワードをリセット">
                 </lightning-button>
-                &nbsp;&nbsp;&nbsp;
-                <template if:true={canreset}>
-                    <lightning-button variant="success" icon-name="utility:reset_password" onclick={navigateToWebPage} label="パスワードをリセット">
-                    </lightning-button>
-                </template>
-                <template if:false={canreset}>
-                    <lightning-button variant="success" icon-name="utility:reset_password" disabled label="パスワードをリセット">
-                    </lightning-button>
-                </template>
-            </center>
+            </template>
+            <template if:false={canreset}>
+                <lightning-button variant="success" icon-name="utility:reset_password" disabled label="パスワードをリセット">
+                </lightning-button>
+            </template>
         </div>
     </lightning-card>
 </template>
